# python_sigprocessutils

./: .gitignore  README.md  check_code  pylintrc  setup.cfg  setup.py
sigprocessutils/: hooks.py
sigprocessutils/conf/: logconf.py
sigprocessutils/lib/: integration.py  wavelib.py
sigprocessutils/scripts/: audio_downsample.py
