[metadata]
name = sigprocessutils
summary = Python signal processing utilities
description-file =
    README.md
author = Yves-Gwenaël Bourhis
author-email = yves-gwenael.bourhis@orange.fr
classifier =
    Environment :: Python
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[global]
setup-hooks =
    sigprocessutils.hooks.setup_hook

[files]
packages =
    sigprocessutils

[entry_points]
console_scripts =
    audio_down_sample = sigprocessutils.scripts.audio_downsample:main
